Changed layout of projects to a stack
- changed back to sidebar with better color design

--- a/portfolio_max/src/App.css
+++ b/portfolio_max/src/App.css
@@ -21,6 +21,7 @@
 }
 
 .title-description {
+    font-size: 18px;
     color: var(--fourth-color);
     background-color: var(--second-color);
     text-align: left;
