--- a/portfolio_max/src/components/block.css
+++ b/portfolio_max/src/components/block.css
@@ -1,10 +1,13 @@
 .block-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    align-items: stretch;
+    min-height: 100vh;
     color: var(--fourth-color);
     background-color: var(--second-color);
     text-align: left;
-    padding: 12.5% 2.5% 18% 2.5%;
+    padding-top: 5%;
+    border-bottom: 50px solid black;
     a {
         text-decoration: none;
     }
