Removed some unnecessary comments and added some css

--- a/portfolio_max/src/App.css
+++ b/portfolio_max/src/App.css
@@ -21,7 +21,8 @@
 }
 
 .title-description {
-    font-size: 18px;
+    font-size: 1.2rem;
+    max-width: 65ch;
     color: var(--fourth-color);
     background-color: var(--second-color);
     text-align: left;
