--- a/portfolio_max/src/components/block.css
+++ b/portfolio_max/src/components/block.css
@@ -2,12 +2,12 @@
     display: flex;
     justify-content: space-evenly;
     align-items: stretch;
-    min-height: 100vh;
+    min-height: 100svh;
     color: var(--fourth-color);
     background-color: var(--second-color);
     text-align: left;
     padding-top: 5%;
-    border-bottom: 50px solid black;
+    border-bottom: 10px solid black;
     a {
         text-decoration: none;
     }
